# idfkit

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION_EVALUATION.md  Makefile  PERSONA_EVALUATION.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/actions/setup-python-env/: action.yml
.github/workflows/: deploy-docs.yml  deploy-pr-docs.yml  main.yml  on-release-main.yml
api/document/: index.html
api/exceptions/: index.html
api/geometry/: index.html
api/io/: index.html
api/objects/: index.html
api/references/: index.html
api/schedules/: index.html
api/schema/: index.html
api/simulation/: index.html
api/simulation/async/: index.html
api/simulation/batch/: index.html
api/simulation/cache/: index.html
api/simulation/expand/: index.html
api/simulation/fs/: index.html
api/simulation/plotting/: index.html
api/simulation/results/: index.html
api/simulation/runner/: index.html
api/simulation/sql/: index.html
api/thermal/: index.html
api/validation/: index.html
api/versions/: index.html
api/visualization/: index.html
api/weather/: index.html
api/weather/designday/: index.html
api/weather/download/: index.html
api/weather/station/: index.html
benchmarks/: bench.py  bench_progress.py  index.html  progress_benchmark_results.json
concepts/caching/: index.html
concepts/cloud-storage/: index.html
concepts/simulation-architecture/: index.html
concepts/weather-pipeline/: index.html
design/schedule-evaluator/: index.html
docs/: benchmarks.md  evaluation-vscode-integration.md  getting_started.ipynb  index.md  migration.md  modules.md  plan-energyplus-simulation.md
docs/api/: geometry_builders.md  io.md  thermal.md  visualization.md  zoning.md
docs/api/simulation/: async.md  batch.md  cache.md  expand.md  fs.md  index.md  plotting.md  results.md  runner.md  sql.md
docs/api/weather/: designday.md  download.md  index.md  station.md
docs/concepts/: caching.md  cloud-storage.md  simulation-architecture.md  type-safety.md  weather-pipeline.md
docs/design/: schedule-evaluator.md  simulation-progress-callbacks.md
docs/examples/: celery-integration.md  cloud-simulations.md  scythe.md  sizing-workflow.ipynb
docs/getting-started/: installation.md  quick-start.md
docs/schedules/: index.md
docs/simulation/: async.md  batch.md  caching.md  errors.md  index.md  output-discovery.md  plotting.md  progress.md  results.md  running.md  sql-queries.md
docs/snippets/index/: find_weather_stations.py  quick_example.py  run_simulations.py
docs/snippets/migration/: accessing_fields.py  accessing_fields_2.py  batch_updates.py  (+31 more)
docs/stylesheets/: extra.css
docs/troubleshooting/: energyplus.md  errors.md
docs/weather/: design-days.md  downloads.md  geocoding.md  index.md  station-search.md
examples/cloud-simulations/: index.html
examples/parametric-study/: index.html  parametric-study.ipynb
examples/sizing-workflow/: index.html
getting-started/core-tutorial/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
gh-pages-extra/: CNAME
migration/: index.html
pr-preview/pr-42/: 404.html
pr-preview/pr-43/: 404.html  index.html  sitemap.xml
pr-preview/pr-45/: objects.inv
pr-preview/pr-46/: objects.inv  sitemap.xml
pr-preview/pr-48/: index.html
pr-preview/pr-52/: 404.html  index.html  objects.inv  sitemap.xml
pr-preview/pr-53/: 404.html  index.html  objects.inv  sitemap.xml
pr-preview/pr-54/: objects.inv
pr-preview/pr-57/: 404.html  index.html  objects.inv  sitemap.xml
pr-preview/pr-58/: objects.inv
pr-preview/pr-74/: 404.html  index.html  objects.inv  robots.txt  sitemap.xml
pr-preview/pr-75/: 404.html  index.html  objects.inv  sitemap.xml
schedules/: index.html
scripts/: add_snippet_types.py  build_docs.sh  build_weather_index.py  extract_snippets.py
search/: search_index.json
simulation/: index.html
simulation/async/: index.html
simulation/batch/: index.html
simulation/caching/: index.html
simulation/errors/: index.html
simulation/output-discovery/: index.html
simulation/plotting/: index.html
simulation/progress/: index.html
simulation/results/: index.html
simulation/running/: index.html
simulation/sql-queries/: index.html
snippets/migration/: geometry.py
src/idfkit/: __init__.py  _compat.py  _compat_object.py  _generated_types.pyi  document.py  document.pyi  download.py  epjson_parser.py  exceptions.py  geometry.py  geometry_builders.py  idf_parser.py  introspection.py  objects.py  references.py  schema.py  validation.py  versions.py  writers.py  zoning.py
tests/: conftest.py  test_basic.py  test_document.py  test_epjson_roundtrip.py  test_eppy_compat.py  test_exceptions.py  test_expand.py  test_foo.py  test_geometry.py  test_geometry_builders.py  test_idf_roundtrip.py  test_introspection.py  test_objects.py  test_parsers.py  test_references.py  test_schema.py  test_simulation_async.py  test_simulation_batch.py  test_simulation_cache.py  test_simulation_config.py  test_simulation_csv_parser.py  test_simulation_e2e.py  test_simulation_err_parser.py  test_simulation_fs.py  test_simulation_outputs.py  test_simulation_plotting.py  test_simulation_progress.py  test_simulation_progress_bars.py  test_simulation_rdd_parser.py  test_simulation_result.py  test_simulation_runner.py  test_simulation_sql_parser.py  test_strict_typing.py  test_thermal.py  test_validation.py  test_versions.py  test_visualization.py  test_visualization_model.py  test_weather_designday.py  test_weather_download.py  (+6 more)
tests/schedules/: test_compact.py  test_day.py  test_day_types.py  test_evaluate.py  test_file.py  test_holidays.py  test_series.py  test_time_utils.py  test_types.py  test_week.py  test_year.py
troubleshooting/energyplus/: index.html
troubleshooting/errors/: index.html
weather/: index.html
weather/design-days/: index.html
weather/downloads/: index.html
weather/geocoding/: index.html
weather/station-search/: index.html
(+1080 files in other folders)
