[project]
name = "idfkit"
version = "0.1.0"
description = "A fast, modern EnergyPlus IDF/epJSON parser with O(1) lookups and reference tracking"
authors = [{ name = "Samuel Letellier-Duchesne", email = "samuelduchesne@me.com" }]
readme = "README.md"
keywords = ["energyplus", "idf", "epjson", "parser", "building simulation", "energy modeling"]
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://samuelduchesne.github.io/idfkit/"
Repository = "https://github.com/samuelduchesne/idfkit"
Documentation = "https://samuelduchesne.github.io/idfkit/"

[project.optional-dependencies]
weather = ["openpyxl>=3.1.0"]
dataframes = ["pandas>=1.5"]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "pyright>=1.1.389",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-jupyter>=0.24.0",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "openpyxl>=3.1.0",
]
benchmark = [
    "eppy>=0.5.63",
    "matplotlib>=3.7.0",
    "opyplus>=2.0.7",
    "energyplus-idd-idf-utilities>=0.88",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idfkit"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
exclude = ["benchmarks", "src/idfkit/schemas", "src/idfkit/weather/data", ".venv", "**/node_modules", "**/__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"benchmarks/*" = ["S603", "S607", "SIM115", "B007", "B905"]
"scripts/*" = ["T201"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]
