[project]
name = "idfkit"
version = "0.1.0"
description = "A fast, modern EnergyPlus IDF/epJSON parser with O(1) lookups and reference tracking"
authors = [{ name = "Samuel Letellier-Duchesne", email = "samuelduchesne@me.com" }]
readme = "README.md"
keywords = ["energyplus", "idf", "epjson", "parser", "building simulation", "energy modeling"]
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://samuelduchesne.github.io/idfkit/"
Repository = "https://github.com/samuelduchesne/idfkit"
Documentation = "https://samuelduchesne.github.io/idfkit/"

[project.optional-dependencies]
# Core simulation requires no extras
sim = []
# Weather station index refresh (bundled index loads without this)
weather = ["openpyxl>=3.1.0"]
# DataFrame result conversion
pandas = ["pandas>=1.5"]
dataframes = ["pandas>=1.5"]  # Alias for backwards compatibility
# Cloud storage backends
s3 = ["boto3>=1.26"]
cloud = ["boto3>=1.26"]  # Alias for s3
# Plotting backends
plot = ["matplotlib>=3.5"]
plotly = ["plotly>=5.0"]
# Built-in tqdm progress bars for simulations
progress = ["tqdm>=4.60"]
# Everything
all = [
    "openpyxl>=3.1.0",
    "pandas>=1.5",
    "matplotlib>=3.5",
    "plotly>=5.0",
    "boto3>=1.26",
    "tqdm>=4.60",
]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "pyright>=1.1.389",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-jupyter>=0.24.0",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "openpyxl>=3.1.0",
    "pandas-stubs>=2.0",
    "matplotlib-stubs>=0.2.0",
    "types-boto3[s3]>=1.0.0",
    "boto3>=1.26",
]
benchmark = [
    "eppy>=0.5.63",
    "matplotlib>=3.7.0",
    "opyplus>=2.0.7",
    "energyplus-idd-idf-utilities>=0.88",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idfkit"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
exclude = [
    "benchmarks", "src/idfkit/schemas", "src/idfkit/weather/data",
    ".venv", "**/node_modules", "**/__pycache__",
    # Snippets with async/return at module level (doc fragments, not full modules)
    "docs/snippets/concepts/simulation-architecture/streaming.py",
    "docs/snippets/simulation/async/early_termination.py",
    "docs/snippets/simulation/sql-queries/error_handling.py",
]

[[tool.pyright.executionEnvironments]]
root = "docs/snippets"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportOptionalMemberAccess = false
reportMissingParameterType = false
reportMissingImports = false
reportUntypedFunctionDecorator = false
reportUntypedBaseClass = false
reportMissingTypeArgument = false
reportReturnType = false
reportUnusedVariable = false
reportUnusedExpression = false
reportUnusedFunction = false
reportAssignmentType = false
reportAttributeAccessIssue = false
reportOptionalIterable = false
reportOptionalSubscript = false
reportIncompatibleMethodOverride = false
reportPossiblyUnboundVariable = false
reportMatchNotExhaustive = false
reportMissingModuleSource = false
reportOperatorIssue = false
reportArgumentType = false
reportCallIssue = false
reportGeneralTypeIssues = false
reportIndexIssue = false
reportInvalidTypeForm = false

[tool.pytest.ini_options]
testpaths = ["tests", "src/idfkit"]
addopts = "--doctest-modules --ignore=src/idfkit/simulation --ignore=src/idfkit/weather --ignore=src/idfkit/schedules --ignore=src/idfkit/thermal --ignore=src/idfkit/visualization --ignore=src/idfkit/download.py"
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
markers = [
    "integration: marks tests as requiring EnergyPlus installation (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"benchmarks/*" = ["S603", "S607", "SIM115", "B007", "B905"]
"scripts/*" = ["T201"]
"docs/snippets/*" = ["E402", "F706", "F821", "F841", "F811", "I", "S", "B", "TRY", "UP008"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]
